# lab3

./: .gitignore  CMakeLists.txt  binarySignal.cpp  binarySignal.h  dBinarySignal.cpp  dBinarySignal.h  main.cpp  state.h  tests.cpp  tests.h  ui.cpp  ui.h  util.cpp  util.h
gtest/: CMakeLists.txt
